<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Application</string>
    <string name="login_welcome">Welcome to \n D\'Classics</string>
    <string name="email_label">Username</string>
    <string name="username_hint">Type your username</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Type your Password</string>
    <string name="login">Log In</string>
    <string name="error_username">Username must be filled</string>
    <string name="error_password">Password must be filled</string>
    <string name="error_password_format">Password must be alphanumeric</string>
    <string name="about_author">J.D. Salinger was an American writer, best known for his 1951 novel The Catcher in the Rye. Before its publi cation, Salinger published several short stories in Story magazine</string>
    <string name="book_desc">A poetic journey follows a young prince traveling across planets, encountering unusual characters that reveal deep truths about life, love, and human nature. Through simple yet profound conversations, the story reflects on innocence, imagination, and the importance of seeing beyond what is visible yet profound conversations, the story reflects on innocence, imagination, and the importance of seeing.</string>
    
</resources>
