<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg_gradient"
>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="72dp" />

    <com.google.android.material.card.MaterialCardView
    android:id="@+id/loginCard"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="28dp"
    android:layout_marginEnd="28dp"
    android:layout_marginTop="-12dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="28dp"
    app:cardElevation="8dp"
    app:layout_constraintTop_toBottomOf="@id/imgLogo"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="56dp"
        android:paddingBottom="32dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/login_welcome"
            style="@style/Heading1"
            android:textColor="@color/primary_dark"
            />

        <TextView
            android:id="@+id/tvUsernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email_label"
            style="@style/Heading2"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primary_dark"
        />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input"
            android:hint="@string/username_hint"
            android:paddingHorizontal="16sp"
            android:inputType="textEmailAddress"
            style="@style/Reguler"
            android:textColorHint="@color/dark_gray"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/password_label"
            style="@style/Heading2"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primary_dark"
        />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/dark_gray"
            android:textSize="16sp"
        />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:background="@drawable/bg_button_primary"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@null"
            app:backgroundTint="@null"
            />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>